hphp/hack/test/typecheck/function_pointer/class_meth_reified_targs_missing2.php.exp
File "class_meth_reified_targs_missing2.php", line 8, characters 13-15:
Expected 2 type parameters (Typing[4029])
File "class_meth_reified_targs_missing2.php", line 4, characters 26-28:
Definition is here
File "class_meth_reified_targs_missing2.php", line 8, characters 13-15:
Invalid reified hint (Typing[4305])
File "class_meth_reified_targs_missing2.php", line 8, characters 13-15:
This is a wildcard, it cannot be used as a reified type argument
File "class_meth_reified_targs_missing2.php", line 4, characters 45-46:
`T2` is reified
