hphp/hack/test/typecheck/function_pointer/class_meth_reified_targs_missing2.php
<?hh

final class Foo {
  public static function bar<reify T, reify T2>(T $_): void {}
}

function test(): void {
  $x = Foo::bar<int>;
}
